# DevTeam

./: .env.template  .gitignore  compose.dev.yml  compose.yml  justfile
backend/: .gitignore  Dockerfile  pyproject.toml
core/: .env.template  .gitignore  config.example.yaml  config.yaml.example  main.py  pyproject.toml
core/devteam/agents/: base.py  types.py
core/devteam/config/: __init__.py  config.py  models.py  settings.py  utils.py
core/devteam/llm/: __init__.py  base.py  llm_models.py  models.py
core/devteam/llm/clients/: anthropic.py  gemini.py  openai.py
core/devteam/state/models/: context.py  plan.py  reviews.py  scratchpad.py  task.py
core/devteam/tools/: __init__.py  base.py
core/devteam/utils/: __init__.py  utils.py
web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
