[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.16.5",
    "fastapi[standard]>=0.121.1",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "strawberry-graphql[cli,fastapi]>=0.283.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
